add fetchAllUsers feature
